@@ -1,3 +1,14 @@
+2003-10-17  Jim Blandy  <jimb@redhat.com>
+
+	Merged from mainline: 
+	
+	2003-09-22  Jim Blandy  <jimb@redhat.com>
+
+	* dwarf2read.c (read_array_type): When building the type for an
+	array of unspecified length, make sure to choose the upper bound
+	so that the array's total length comes out to be zero --- that's
+	how we represent such arrays.
+
 2003-10-09  Daniel Jacobowitz  <drow@mvista.com>
 
 	* remote-mips.c (mips_initialize): Remove unneeded call to
